--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
     <p class="d2-desp-1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
  <button class="main-btn-1">JOIN NOW</button>
 </ul>
-<img src="/Images/Group 70.png" alt="">
+<img src="Images/Group 70.png" alt="">
 </div>
-
+<div class="main-d3">
+     <li><span class="color">
+    
+        Place:</span>New Park Hotel</li>
+        <li><span class="color">Date:</span>31 December Night 2023</li>
+        <li><span class="color">Time:</span>Evening 7.30 pm to 12.30 am</li>
+</div>
     </main>
     <footer>
 
