--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         Place:</span>New Park Hotel</li>
         <li><span class="color">Date:</span>31 December Night 2023</li>
         <li><span class="color">Time:</span>Evening 7.30 pm to 12.30 am</li>
+        <button class="main-btn-2"> JOIN ME</button>
 </div>
     </main>
     <footer>
