added main or footer

--- a/index.html
+++ b/index.html
@@ -43,9 +43,97 @@
         <li><span class="color">Time:</span>Evening 7.30 pm to 12.30 am</li>
         <button class="main-btn-2"> JOIN ME</button>
 </div>
-    </main>
-    <footer>
+<div class="main-2nd">
+<ul class="main-ul-1">
 
+    <h3 class="color">NEW BEST OFFER</h3>
+    <h1 class="up-coming">Coming Soon</h1>
+    <p class="dolor-desp-1" >Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+</ul>
+<div class="main-d5-img">
+    <img src="Images/Ellipse 1.png" alt="">
+</div>
+<ul main-d6>
+<h1 class="color"> 2024</h1>
+<p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+<img src="Images/Group 96.png" alt="">
+</ul>
+</div>
+
+<!-- start 3rd part of main -->
+<div class="main-3rd">
+    <ul>
+        <h3>WHAT IS FUNCTIONAL</h3>
+        <h1><span class="color">Holidays</span> Sale 50%</h1>
+        <p class="dolor-desp-2"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+
+    </ul>
+    <div>
+        <img class="main-d7-image-1" src="Images/Rectangle 2.png" alt="">
+        <img class="main-d7-image-2" src="Images/Group 75.png" alt="">
+        <img class="main-d7-image-3" src="Images/Rectangle 1.png" alt="">
+        <img class="main-d7-image-4" src="Images/Group 44.png" alt="">
+    </div>
+
+</div>
+<div class="main-4th">
+    <h3 class="main-4th-title-1">THE BEST GIFTS</h3>
+    <h1 class="title-2">Our Awesome Portfolio</h1>
+    <p class="dolor-desp-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+<div class="main-d8-image-5">
+    <img src="Images/Rectangle 3.png" alt="">
+    <img src="Images/Rectangle 4.png" alt="">
+
+    <img src="Images/Rectangle 5.png" alt="">
+</div>
+<div class="main-d9-image-6">
+    <img src="Images/Rectangle 6.png" alt="">
+    <img src="Images/Rectangle 7.png" alt="">
+    <img src="Images/Rectangle 8.png" alt="">
+</div>
+</div>
+<section class="Subscribe-section">
+    <ul>
+        <img src="images/Group 61.png" alt="">
+        <h1 class="subscriber-title">Subscribe Newsletter</h1>
+        <p class="subscriber-desp">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+            sodales risus ut pellentesque vel euismod. </p>
+        <div class="table-container">
+            <input class="sub-input" type="email" placeholder="user@gmail.com" />
+            <button class="sub-btn" type="submit">Subscribe</button>
+        </div>
+    </ul>
+</section>
+    </main>
+    <footer class="footer">
+        <div class="footer-d1">
+            <div class="footer-p">
+                44, Big Building Roosevelt Street
+                Beach Gardens Florida 33410
+            </div>
+            <div class="footer-contact">
+                <div class="footer-phone">
+                <img class="contact-icon" src="Images/Call.png" alt="">
+                <p class="number">+00 123 584 124</p>
+            </div>
+                <div class="footer-website">
+                    <img class="website-icon" src="Images/Website.png" alt="">
+                <p class="website-text">www.website.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-d2-icons">
+            <img src="images/Facebook.png" alt="Loading Image">
+            <img src="images/Instagram.png" alt="Loading Image">
+            <img src="images/Linkedin.png" alt="Loading Image">
+            <img src="images/Twitter.png" alt="Loading Image">
+
+        </div>
+<div class="footer-d3">
+    <div class="footer-d4-p1">2017, All Rights Reserved.</div>
+    <div class="footer-d4-p2">Unsubscribe</div>
+</div>
     </footer>
 </body>
 </html>
