added footer icons

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             </div>
         </div>
         <div class="footer-d2-icons">
-            <img src="images/Facebook.png" alt="Loading Image">
-            <img src="images/Instagram.png" alt="Loading Image">
-            <img src="images/Linkedin.png" alt="Loading Image">
-            <img src="images/Twitter.png" alt="Loading Image">
+            <img src="Images/Facebook.png" alt="">
+            <img src="Images/Instagram.png" alt="">
+            <img src="Images/Linkedin.png" alt="">
+            <img src="Images/Twitter.png" alt="">
 
         </div>
 <div class="footer-d3">
